# ccbda-project

./: .gitignore  README.md  pyproject.toml
backend/: .env.example  README.md  pyproject.toml
backend/src/app/: config.py  main.py
docs/: First_Draft.md  Instructions.md  Project_Draft.md  Project_Draft_Notes.md
