[project]
name = "ccbda-backend"
version = "0.1.0"
description = "CCBDA project backend — FastAPI + DynamoDB"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "pydantic-settings",
    "boto3",
]

[dependency-groups]
dev = [
    "pytest",
    "httpx",
    "ruff",
    "pre-commit",
]

[tool.uv.sources]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/app"]

[tool.ruff]
target-version = "py313"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
